# Parallel-Minimum-Interval-Cover

./: .gitignore  BUG_FIX_SUMMARY.md  CHANGELOG.md  CMakeLists.txt  README.md  WORK_SUMMARY.md  benchmark_interval_covering.cpp  benchmark_thread_scaling.cpp  debug_comparison.cpp  debug_scan_hang  debug_scan_hang_O3  debug_scan_hang_full  interval_covering.h  plot_breakdown.py  test_benchmark_flow  test_interval_covering.cpp  test_sample_duplicates  test_sample_duplicates.cpp  test_simple_scan
benchmarks/: benchmark_interval_covering.cpp  benchmark_parallel_breakdown.cpp  benchmark_thread_scaling.cpp
build_release/: .ninja_deps  .ninja_log  benchmark_interval_covering  build.ninja  rules.ninja
docs/plans/: 2025-12-30-thread-scaling-benchmark-design.md  2026-01-01-repository-reorganization-design.md  2026-01-04-benchmark-scripts-refactor.md
include/: interval_covering.h  test_utils.h
results/: .gitignore
tests/: debug_comparison.cpp  debug_scan_hang.cpp  test_interval_covering.cpp  test_simple_scan.cpp
tools/: bench_parallel_breakdown.sh  bench_thread_scaling.sh  benchmark_config.sh  plot_parallel_breakdown.py  plot_performance.py  plot_results.py  run_all_benchmarks.sh  run_parallel_breakdown.sh  run_tests.sh  run_thread_scaling.sh
